Add sequence fix migration and update documentation for DB and endpoints