@@ -1,62 +1,134 @@
 package org.example.controller;
 
-import org.example.service.AIInsightsService;
+import org.example.model.Recognition;
+import org.example.repository.RecognitionRepository;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.time.Instant;
+import java.util.List;
 import java.util.Map;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 @RestController
 @RequestMapping("/metrics")
 public class MetricsController {
 
-    private final AIInsightsService insightsService;
+    private final RecognitionRepository recognitionRepository;
+    private static final Logger log = LoggerFactory.getLogger(MetricsController.class);
 
-    public MetricsController(AIInsightsService insightsService) {
-        this.insightsService = insightsService;
+    public MetricsController(RecognitionRepository recognitionRepository) {
+        this.recognitionRepository = recognitionRepository;
     }
 
     @GetMapping("/summary")
     public Map<String, Object> summary(@RequestParam(required = false) Long days) {
         Instant to = Instant.now();
-        Instant from = to.minusSeconds(days == null || days <= 0 ? 30L*24*3600 : days*24*3600);
-        Map<String, Object> raw = insightsService.generateInsights(from, to);
+        Instant from = (days == null) ? Instant.EPOCH : to.minusSeconds(days*24*3600);
+        List<Recognition> recognitions = recognitionRepository.findAllBetween(from, to);
+        log.info("Fetched {} recognitions for metrics window from {} to {}", recognitions.size(), from, to);
+        if (!recognitions.isEmpty()) {
+            recognitions.stream().limit(5).forEach(r -> log.info("Recognition: id={}, sentAt={}, status={}, points={}", r.getId(), r.getSentAt(), r.getApprovalStatus(), r.getAwardPoints()));
+        }
+        // Totals
+        int totalRecognitions = recognitions.size();
+        int totalAwardPoints = recognitions.stream().mapToInt(r -> r.getAwardPoints() != null ? r.getAwardPoints() : 0).sum();
+        // Statuses
+        long approvedCount = recognitions.stream().filter(r -> "APPROVED".equalsIgnoreCase(r.getApprovalStatus())).count();
+        long rejectedCount = recognitions.stream().filter(r -> "REJECTED".equalsIgnoreCase(r.getApprovalStatus())).count();
+        long pendingCount = recognitions.stream().filter(r -> "PENDING".equalsIgnoreCase(r.getApprovalStatus())).count();
+        double approvalRate = totalRecognitions == 0 ? 0.0 : (double) approvedCount / totalRecognitions * 100.0;
+        // Series (daily)
+        java.util.Map<String, Integer> timeSeriesByDay = new java.util.HashMap<>();
+        java.time.ZoneId zone = java.time.ZoneOffset.UTC;
+        for (Recognition r : recognitions) {
+            if (r.getSentAt() != null) {
+                String day = r.getSentAt().atZone(zone).toLocalDate().toString();
+                timeSeriesByDay.put(day, timeSeriesByDay.getOrDefault(day, 0) + 1);
+            }
+        }
+        // Leaderboards
+        java.util.Map<Long, Integer> topSenders = new java.util.HashMap<>();
+        java.util.Map<Long, Integer> topRecipients = new java.util.HashMap<>();
+        for (Recognition r : recognitions) {
+            if (r.getSenderId() != null) topSenders.put(r.getSenderId(), topSenders.getOrDefault(r.getSenderId(), 0) + 1);
+            if (r.getRecipientId() != null) topRecipients.put(r.getRecipientId(), topRecipients.getOrDefault(r.getRecipientId(), 0) + 1);
+        }
+        // Points distribution
+        java.util.Map<Integer, Integer> pointsDistribution = new java.util.HashMap<>();
+        for (Recognition r : recognitions) {
+            int pts = r.getAwardPoints() != null ? r.getAwardPoints() : 0;
+            pointsDistribution.put(pts, pointsDistribution.getOrDefault(pts, 0) + 1);
+        }
+        // Role aggregates
+        java.util.Map<String, Integer> sendersByRole = new java.util.HashMap<>();
+        java.util.Map<String, Integer> recipientsByRole = new java.util.HashMap<>();
+        for (Recognition r : recognitions) {
+            if (r.getSender() != null && r.getSender().getRole() != null)
+                sendersByRole.put(r.getSender().getRole(), sendersByRole.getOrDefault(r.getSender().getRole(), 0) + 1);
+            if (r.getRecipient() != null && r.getRecipient().getRole() != null)
+                recipientsByRole.put(r.getRecipient().getRole(), recipientsByRole.getOrDefault(r.getRecipient().getRole(), 0) + 1);
+        }
+        // Manager summaries
+        java.util.Map<Long, Integer> managerSummaries = new java.util.HashMap<>();
+        for (Recognition r : recognitions) {
+            if (r.getRecipient() != null && r.getRecipient().getManagerId() != null)
+                managerSummaries.put(r.getRecipient().getManagerId(), managerSummaries.getOrDefault(r.getRecipient().getManagerId(), 0) + 1);
+        }
         // Build structured response
         Map<String, Object> resp = new java.util.LinkedHashMap<>();
         resp.put("window", java.util.Map.of("from", from.toString(), "to", to.toString()));
-        // Totals
-        Map<String, Object> totals = new java.util.LinkedHashMap<>();
-        totals.put("count", raw.getOrDefault("totalRecognitions", 0));
-        totals.put("points", raw.getOrDefault("totalAwardPoints", 0));
-        resp.put("totals", totals);
-        // Statuses
-        Map<String, Object> statuses = new java.util.LinkedHashMap<>();
-        statuses.put("approved", raw.getOrDefault("approvedCount", 0));
-        statuses.put("rejected", raw.getOrDefault("rejectedCount", 0));
-        statuses.put("pending", raw.getOrDefault("pendingCount", 0));
-        statuses.put("approvalRatePercent", raw.getOrDefault("approvalRate", 0.0));
-        resp.put("statuses", statuses);
-        // Series
-        @SuppressWarnings("unchecked")
-        Map<String, Integer> perDay = (Map<String, Integer>) raw.getOrDefault("timeSeriesByDay", java.util.Collections.emptyMap());
-        resp.put("series", java.util.Map.of("daily", perDay));
-        // Leaderboards
-        Map<String, Object> boards = new java.util.LinkedHashMap<>();
-        boards.put("topSenders", raw.getOrDefault("topSenders", java.util.Collections.emptyMap()));
-        boards.put("topRecipients", raw.getOrDefault("topRecipients", java.util.Collections.emptyMap()));
-        resp.put("leaderboards", boards);
-        // Points distribution
-        resp.put("pointsDistribution", raw.getOrDefault("pointsDistribution", java.util.Collections.emptyMap()));
-        // Role aggregates
-        Map<String, Object> roles = new java.util.LinkedHashMap<>();
-        roles.put("sendersByRole", raw.getOrDefault("sendersByRole", java.util.Collections.emptyMap()));
-        roles.put("recipientsByRole", raw.getOrDefault("recipientsByRole", java.util.Collections.emptyMap()));
-        resp.put("roles", roles);
-        // Manager summaries
-        resp.put("managers", raw.getOrDefault("managerSummaries", java.util.Collections.emptyMap()));
+        resp.put("totals", java.util.Map.of("count", totalRecognitions, "points", totalAwardPoints));
+        resp.put("statuses", java.util.Map.of(
+            "approved", approvedCount,
+            "rejected", rejectedCount,
+            "pending", pendingCount,
+            "approvalRatePercent", approvalRate
+        ));
+        resp.put("series", java.util.Map.of("daily", timeSeriesByDay));
+        resp.put("leaderboards", java.util.Map.of(
+            "topSenders", topSenders,
+            "topRecipients", topRecipients
+        ));
+        resp.put("pointsDistribution", pointsDistribution);
+        resp.put("roles", java.util.Map.of(
+            "sendersByRole", sendersByRole,
+            "recipientsByRole", recipientsByRole
+        ));
+        resp.put("managers", managerSummaries);
         return resp;
+    }
+
+    @GetMapping("/status")
+    public Map<String, Object> statusUp() {
+        return Map.of("status", "UP", "timestamp", java.time.Instant.now().toString());
+    }
+
+    @GetMapping("/verify-script")
+    public Map<String, Object> verifyScript() {
+        try {
+            ProcessBuilder pb = new ProcessBuilder("/bin/bash", "./docs/curl_examples.sh");
+            pb.redirectErrorStream(true);
+            Process proc = pb.start();
+            java.io.InputStream is = proc.getInputStream();
+            StringBuilder sb = new StringBuilder();
+            try (java.util.Scanner s = new java.util.Scanner(is).useDelimiter("\\A")) {
+                while (s.hasNext()) sb.append(s.next());
+            }
+            int exit = proc.waitFor();
+            return Map.of(
+                "status", exit == 0 ? "OK" : "ERROR",
+                "exitCode", exit,
+                "output", sb.toString()
+            );
+        } catch (Exception e) {
+            return Map.of(
+                "status", "ERROR",
+                "error", e.getMessage()
+            );
+        }
     }
 }
